modules/observability/prometheus-operator/base/resources/workloads/prometheus-operator-webhook/configs/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-operator-webhook
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
# Allow ingress from the api-server endpoint
  - ports:
    - port: 0
      protocol: TCP
