modules/observability/prometheus-operator/base/resources/workloads/prometheus-operator-webhook/configs/mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: prometheus-operator
webhooks:
- name: prometheusrulemutate.monitoring.coreos.com
  failurePolicy: Fail
  rules:
  - apiGroups:
    - monitoring.coreos.com
    apiVersions:
    - "*"
    resources:
    - prometheusrules
    operations:
    - CREATE
    - UPDATE
  clientConfig:
    service:
      namespace: default
      name: prometheus-operator-webhook
      path: /admission-prometheusrules/mutate
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
