modules/observability/prometheus-operator/base/resources/workloads/prometheus-operator-webhook/configs/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: prometheus-operator
webhooks:
- name: prometheusrulemutate.monitoring.coreos.com
  failurePolicy: Fail
  rules:
  - apiGroups:
    - monitoring.coreos.com
    apiVersions:
    - "*"
    resources:
    - prometheusrules
    operations:
    - CREATE
    - UPDATE
  clientConfig:
    service:
      namespace: default
      name: prometheus-operator-webhook
      path: /admission-prometheusrules/validate
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
- name: alertmanagerconfigsvalidate.monitoring.coreos.com
  failurePolicy: Fail
  rules:
  - apiGroups:
    - monitoring.coreos.com
    apiVersions:
    - v1alpha1
    resources:
    - alertmanagerconfigs
    operations:
    - CREATE
    - UPDATE
  clientConfig:
    service:
      name: prometheus-operator-webhook
      namespace: default
      path: /admission-alertmanagerconfigs/validate
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
